# tumbler

./: README.md
arduino/: README.md  reset.sh
arduino/sketch/: BME280.h  BMEControl.h  CapacitiveSensor.cpp  CapacitiveSensor.h  Constants.h  Controller.ino  EEPROMControl.h  EEPROMTable.h  IRLED.h  LEDRing.h  LightSensor.h  Makefile  Module.h  SerialIO.cpp  SerialIO.h  TouchButtons.h  TouchSensor.h
etc/: rc.local
hardware_api/btm/: README.md  pairing.sh  shutdown.sh  startup.sh  volume_down.sh  volume_up.sh
hardware_api/btm/data/: LICENSE
hardware_api/microphone/: Makefile  README.md  rec.cpp  tumbler_micophone_positions.txt
hardware_api/microphone/microphone_positions/: README.md  microphone_positions.txt
libtumbler/: Makefile.am  README.md  configure.ac
libtumbler/examples/: Makefile.am  buttons.cpp  buttons2.cpp  buttons3.cpp  buttons4.cpp  buttons5.cpp  envsensor.cpp  irall.cpp  irproximitysensor.cpp  irsignalreceiver.cpp  ledring.cpp  ledring2.cpp  lightsensor.cpp  versioncheck.cpp
libtumbler/include/: Makefile.am
libtumbler/include/tumbler/: Makefile.am  bme.h  buttons.h  envsensor.h  irio.h  ledring.h  lightsensor.h  speaker.h  touch.h  tumbler.h
libtumbler/src/: Makefile.am  bme.cpp  buttons.cpp  envsensor.cpp  irio.cpp  ledring.cpp  lightsensor.cpp  speaker.cpp  touch.cpp  tumbler.cpp  tumbler.pc.in
libtumbler/test/: Makefile.am  bme_test.cpp  buttons_test.cpp  ledring_test.cpp  serial_test.cpp  speaker_test.cpp  touch_test.cpp
libtumbler/test/data/: LICENSE  test1.raw
